# async-hdf5

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE
.github/workflows/: lint.yml  python-release.yaml  rust-release.yml  test-python.yml  test.yml
python/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
python/docs/: hooks.py
python/docs/api/: virtualizarr.md  xarray.md  zarr.md
python/python/async_hdf5/: __init__.py  _async_hdf5.pyi  _chunk_index.pyi  _file.pyi  _input.py  _utils.py  lazy_store.py  virtualizarr.py  xarray.py  zarr.py
python/scripts/: sync_external_hdf5.py  sync_gdal_hdf5.py  sync_h5py_test_data.py  sync_hdf5_group.py  upload_test_data.py
python/src/: chunk_index.rs  dataset.rs  error.rs  group.rs  h5file.rs  lib.rs  reader.rs
python/tests/: conftest.py  test_error_messages.py  test_external.py  test_gdal_hdf5.py  test_hdf5_group.py  test_local.py  test_xarray_backend.py
src/: chunk_index.rs  dataset.rs  endian.rs  error.rs  extensible_array.rs  file.rs  fixed_array.rs  group.rs  lib.rs  object_header.rs  reader.rs  superblock.rs
src/btree/: v1.rs  v2.rs
src/heap/: fractal.rs  global.rs  local.rs  mod.rs
src/messages/: attribute.rs  attribute_info.rs  data_layout.rs  dataspace.rs  datatype.rs  fill_value.rs  filter_pipeline.rs  link.rs  link_info.rs  mod.rs  symbol_table.rs
tests/: attributes.rs  chunk_index.rs  group_navigation.rs
tests/fixtures/: attributes.h5  attributes_v1.h5  attributes_vlen.h5  datasets.h5  datasets_v1.h5  groups_v1.h5  groups_v2.h5  groups_v2_latest.h5
