[package]
name = "py-async-hdf5"
version = "0.1.0"
authors = ["Max Jones"]
edition = "2021"
description = "Async HDF5 metadata reader for Python with a Rust core."
license = "MIT"
rust-version = "1.75"

[lib]
name = "_async_hdf5"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
async-hdf5 = { path = "../", features = ["object_store", "reqwest"] }
async-trait = "0.1"
bytes = "1"
object_store = "0.13"
pyo3 = { version = "0.27", features = ["macros"] }
pyo3-async-runtimes = "0.27"
pyo3-bytes = "0.5"
pyo3-object_store = "0.8"
thiserror = "2"

# We opt-in to using rustls as the TLS provider for reqwest, which is the HTTP
# library used by object_store.
reqwest = { version = "*", default-features = false, features = [
    "rustls-tls-native-roots",
] }

[profile.release]
lto = true
codegen-units = 1
