[build-system]
requires = ["maturin>=1.4.0,<2.0"]
build-backend = "maturin"

[project]
name = "async-hdf5"
requires-python = ">=3.11"
dependencies = ["obspec>=0.1.0"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "async_hdf5._async_hdf5"
python-source = "python"

[dependency-groups]
dev = [
    "maturin>=1.7.4",
    "obstore>=0.5.1",
    "pytest-asyncio>=1.3",
    "pytest>=9.0",
]
notebook = [
    "earthaccess",
    "h5netcdf",
    "matplotlib",
    "obspec-utils",
    "obstore",
    "pandas",
    "s3fs",
    "virtualizarr",
    "xarray",
    "jupyter",
    "h5py",
]

[tool.pytest.ini_options]
addopts = "--color=yes"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
